Add args and production environment